    
    package: ternaryplot

CHANGES IN VERSION 0.6.0
    
    2016/01/26  Created the function ternaryStyle() with 
        predefined graphics style.
        
        tpPar() now gains an argument "arrows" to plot 
        axis arrows or not.
        
CHANGES IN VERSION 0.5.1
    
    2016/01/26  ternary2SpatialPolygonsDataFrame() renamed 
        to ternary2SpatialPolygons(). Internally, 
        also output a ternary2SpatialPolygons instead of 
        a SpatialPolygonsDataFrame.
        
        Now ternaryPolygons-class objects are also data.frame, 
        and not a list containing a data.frame. Additional 
        information are now passed as attributes (see ?attr), 
        and a new attribute has been included, 'idCol', which 
        contain the column that should be considered as 
        identifier.
        
CHANGES IN VERSION 0.5.0
    
    2016/01/25  Non pre-defined ternary plots are now supported: 
        i.e. plotting empty ternary plots without any 
        pre-defined variable / axis names or plotting 
        ternary data on a ternary plot with "any" variable 
        name (first 3 columns in input data are used).
    
CHANGES IN VERSION 0.4.0
    
    2016/01/19  Function ternaryPolygons() created, to add 
        polygons (grids or ternary classes) over an existing 
        ternary plot. Integrated into ternaryPlot().
        ternaryText() now takes more arguments.
        
        Re-organised the source code.
        
CHANGES IN VERSION 0.3.3
    
    2016/01/12  The package encoding (in DESCRIPTION) has been 
        set to UTF-8.
        
        Now several (more) internal functions uses geometry 
        specific methods (easier to maintain and improve)
        See (in the code) ._ternaryGridBase, ._ternaryTicks, 
        ._ternaryAxisArrowsBase and ._ternaryAxisArrows
        
        ternaryClassification() created. Extract the 
        class-polygons from a ternarySystem-object (if it 
        has classes).
        