@@ -1,0 +1,30 @@
+
+# +--------------------------------------------------------+
+# | Package:    ternaryplot                                |
+# | Language:   R + roxygen2 inline documentation          |
+# | Author(s):  Julien Moeys <Julien.Moeys@@slu.se>        |
+# | License:    AGPL3, Affero General Public License       |
+# |             version 3                                  |
+# +--------------------------------------------------------+
+
+
+
+#' An example of soil texture dataset (generated, virtual, dummy example)
+#'
+#' An example of soil texture dataset (generated, virtual, 
+#'  dummy example).
+#'
+#'
+#'@name textureDataset 
+#'
+#'@usage textureDataset 
+#'
+#'@format 
+#'  A data frame with 200 rows and 3 variables:
+#' \itemize{
+#'   \item \code{CLAY}: Clay content of the soil samples [%].
+#'   \item \code{SILT}: Silt content of the soil samples [%].
+#'   \item \code{SAND}: Sand content of the soil samples [%].
+#'   \item \code{GROUP}: Group to which each sample belong (dummy too).
+#' }  
+NULL
