@@ -41,29 +41,100 @@ Generic ternary-data plotting
 
 library( "ternaryplot" ) 
 
+# Simple example, with point overlay
+# ==================================
 
-# Split the window in 4 sub-plots
-# -------------------------------
+#   Save graphical parameters (to reset them later)
+op <- par( no.readonly = TRUE ) 
 
-#   Save and then set graphical parameters
-op <- par() 
+#   Define the plot style (optional)
+ternaryStyle( margin = TRUE ) 
+
+#   Load an example dataset ( dummy example )
+data( "textureDataset", package = "ternaryplot" ) 
+
+#   Simple ternary plot with point overlay
+ternaryPlot( 
+    s   = "default", 
+    x   = textureDataset[, c( "SAND", "CLAY", "SILT" ) ], 
+    pch = textureDataset[, "GROUP" ], # point symbol
+    lwd = 2 )                         # point outline width
+
+
+
+# Same example, with a ternary classification
+# ===========================================
+
+#   Simple ternary plot with point overlay
+ternaryPlot( 
+    s   = "hypres", 
+    x   = textureDataset, 
+    pch = textureDataset[, "GROUP" ], 
+    lwd = 2 ) 
+
+#   Notice that in the example above "hypres" classification 
+#   *requires* columns named CLAY, SILT and SAND and 
+#   will not take any other column names.
+
+
+
+# Same example, with a ternary classification
+# and custom column names for the texture classes
+# ===========================================
+
+#   Copy the dataset
+textureDataset2 <- textureDataset[, c( "CLAY", "SILT", 
+    "SAND", "GROUP" ) ]
+
+#   Rename columns
+colnames( textureDataset2 ) <- c( "clay", "silt", "sand", 
+    "group" ) 
+
+#   Fetch the definition of the ternary classification
+hypres <- getTernarySystem( "hypres" ) 
+
+#   Set the column names
+#   Note: the order matter!
+blrNames( hypres ) <- c( "sand", "clay", "silt" ) 
+
+#   Set new labels
+blrLabels( hypres ) <- c( "sand [\%]", "clay [\%]", "silt [\%]" ) 
+
+#   Simple ternary plot with point overlay
+ternaryPlot( 
+    s   = hypres, 
+    x   = textureDataset2, 
+    pch = textureDataset2[, "group" ], 
+    lwd = 2 )
+
+
+
+# Vary the plot geometry
+# ======================
+
+# Prepare the plot layout
+# -----------------------
+
+#   Reset plot parameters
+par( op )
+tpPar( reset = TRUE )
+
+#   Split the window in 4 sub-plots
 par( mfrow = c(2,2) )
 
+#   Set the plot style (optional)
+ternaryStyle() 
 
-# Define the plot style (optional)
-# --------------------------------
-
-ternaryStyle( margin = TRUE ) 
 
 
 # Default ternary plot
-# ====================
+# --------------------
 
 s <- ternaryPlot() 
 
 
 # Change axis orientation (clockwise vs counter-clockwise)
-# ========================================================
+# --------------------------------------------------------
 
 #   Set new orientation
 blrClock( s ) <- rep( FALSE, 3 ) 
@@ -73,7 +144,7 @@ ternaryPlot(s)
 
 
 # Change axis orientation and frame angles
-# ========================================
+# ----------------------------------------
 
 #   Set new orientation and angles
 blrClock( s )  <- c( FALSE, TRUE, NA ) 
@@ -84,23 +155,12 @@ ternaryPlot(s)
 
 
 # Same, other direction
-# =====================
+# ---------------------
 
 blrClock( s ) <- c( TRUE, NA, FALSE ) 
 tlrAngles( s ) <- c(45,45,90) 
 
 ternaryPlot(s) 
-
-
-#   reset par
-par( "mfrow" = op[[ "mfrow" ]] )
-
-
-
-# Ternary plot with ternary classification
-# ========================================
-
-ternaryPlot( "hypres" ) 
 
 
 
