@@ -1,6 +1,4 @@
 
-FIX Font in ternary plot axis labels
-
 CREATE ternary2SpatialPointsDataFrame and 
     ternary2SpatialPointsDataFrame.data.frame 
     
