@@ -9,6 +9,16 @@ CHANGES IN VERSION 0.6.0
         tpPar() now gains an argument "arrows" to plot 
         axis arrows or not.
         
+        Added a dummy dataset data( "textureDataset" ) 
+        with dummy soil texture data
+        
+        New examples in ternaryPlot() with overlay 
+        of point ternary data
+        
+        Fix a bug in `blrNames<-.ternarySystem` where vertices 
+        where not renamed correctly (potentially in the 
+        wrong order)
+        
 CHANGES IN VERSION 0.5.1
     
     2016/01/26  ternary2SpatialPolygonsDataFrame() renamed 
